--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -9,67 +9,70 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Edu+VIC+WA+NT+Beginner&display=swap" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous" />
   </head>
 
   <body>
-    <div class="grilla">
-    <header>
-      <nav>
-        <a href="../index.html" ><img class="logotipo" src="../assets/img/logo.png" alt="logo" /></a>
+    <div>
+      <header class="bg-success bg-opacity-50">
+        <nav class="d-flex justify-content-between">
+          <a href="../index.html" ><img class="m-3 rounded-circle border border-dark" src="../assets/img/logo.png" alt="logo" width="150px" height="150px" /></a>
+  
+          <ul class="nav display-flex pt-5">
+            <li class="nav-item pe-1 pt-2"><a class="nav-link text-white fs-4" href="../index.html">Inicio</a></li>
+            <li class="nav-item pe-1 pt-2"><a class="nav-link text-white fs-4" href="portfolio.html">Portfolio</a></li>
+            <li class="nav-item pe-1 pt-2"><a class="nav-link text-white fs-4" href="contacto.html">Contacto</a></li>
+            <li class="nav-item pe-1 pt-2"><a class="nav-link text-white fs-4" href="sobremi.html">Sobre Mi</a></li>
+          </ul>
+        </nav>
+      </header>
 
-        <ul class="barra-nav">
-          <li class="barra-nav-item">
-            <a class="nav-link" href="../index.html">Inicio</a>
-          </li>
-          <li class="barra-nav-item">
-            <a class="nav-link" href="portfolio.html">Portfolio</a>
-          </li>
-          <li class="barra-nav-item">
-            <a class="nav-link" href="contacto.html">Contacto</a>
-          </li>
-          <li class="barra-nav-item">
-            <a class="nav-link" href="sobremi.html">Sobre Mi</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
+      <main class="m-3 bg-success bg-opacity-50">
+        <h2 class="text-center text-white display-4 fw-bold p-5">¡Dejame tu consulta aqui abajo!</h2>
 
-    <main class="fondo-contacto">
-      <h2 class="titulo-principal">¡Dejame tu consulta aqui abajo!</h2>
+        <section>
+          <form class="mx-5" action="send.php" method="get" enctype="multipart/form-data" >
 
-      <section class="contacto">
-        <form class="contacto__form" action="send.php" method="get" enctype="multipart/form-data" >
-          <input class="contacto__form-item" type="text" placeholder=" Nombre" />
-          <input class="contacto__form-item" type="text" placeholder=" Apellido" />
-          <input class="contacto__form-item" type="email" placeholder=" E-mail" />
-          <input class="contacto__form-item" type="text"  placeholder=" Asunto" />
+            <div class="input-group mb-3">
+             <span class="input-group-text" id="inputGroup-sizing-default">Nombre</span>
+              <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+            </div>
 
-          <textarea cols="38" rows="10" placeholder="Escriba aqui su consulta." ></textarea>
+            <div class="input-group mb-3">
+              <span class="input-group-text" id="inputGroup-sizing-default">Apellido</span>
+              <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+            </div>
 
-          <button type="reset">Limpiar formulario</button>
-          <button type="submit">Enviar</button>
-        </form>
-      </section>
-    </main>
+            <div class="input-group mb-3">
+              <span class="input-group-text" id="inputGroup-sizing-default">E-mail</span>
+              <input type="email" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+            </div>
+          
+            <div class="input-group mb-3">
+              <span class="input-group-text" id="inputGroup-sizing-default">Asunto</span>
+              <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+            </div>
 
-    <footer>
-      <h5>Copyright, todos los derechos reservados.</h5>
+            <div class="form-floating">
+              <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
+              <label for="floatingTextarea2">Escriba aqui su consulta.</label>
+            </div>
 
-      <h5>Seguime en mis redes:</h5>
+            <button type="button" class="btn btn-light my-5">Limpiar formulario</button>
 
-      <a
-        href="https://instagram.com/vicodiseno?igshid=YmMyMTA2M2Y="
-        target="_blank"
-        ><img
-          class="foto-pie"
-          src="../assets/img/instagram.jpg"
-          alt="instagram"
-      /></a>
+            <button type="button" class="btn btn-light m-1">Enviar</button>
 
-      <a href="https://www.facebook.com/VicoDiseno" target="_blank"
-        ><img class="foto-pie" src="../assets/img/facebook.png" alt="facebook"
-      /></a>
-    </footer>
-  </div>
+          </form>
+        </section>
+      </main>
+
+      <footer>
+        <h5 class="fs-6 text-center">Copyright, todos los derechos reservados.</h5>
+
+        <h5 class="fs-6 text-center">Seguime en mis redes:
+          <a href="https://instagram.com/vicodiseno?igshid=YmMyMTA2M2Y=" target="_blank" ><img src="../assets/img/instagram.jpg" alt="instagram" height="30px" /></a>
+          <a href="https://www.facebook.com/VicoDiseno" target="_blank"><img src="../assets/img/facebook.png" alt="facebook" height="30px" /></a></h5>
+      </footer> 
+    </div>
   </body>
 </html>
