--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -8,62 +8,87 @@
     <link rel="stylesheet" type="text/css" href="../css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <linkn href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Edu+VIC+WA+NT+Beginner&display=swap" rel="stylesheet" />
+    <linkn
+      href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Edu+VIC+WA+NT+Beginner&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+      crossorigin="anonymous"
+    />
   </head>
 
   <body>
-    <div class="grilla">
-    <header>
-      <nav>
-        <a href="../index.html" ><img class="logotipo" src="../assets/img/logo.png" alt="logo" /></a>
+    <div>
+      <header class="bg-success bg-opacity-50">
+        <nav class="d-flex justify-content-between">
+          <a href="../index.html"
+            ><img class="m-3 rounded-circle border border-dark" src="../assets/img/logo.png" alt="logo" width="150px" height="150px"/></a>
 
-        <ul class="barra-nav">
-          <li class="barra-nav-item">
-            <a class="nav-link" href="../index.html">Inicio</a>
-          </li>
-          <li class="barra-nav-item">
-            <a class="nav-link" href="portfolio.html">Portfolio</a>
-          </li>
-          <li class="barra-nav-item">
-            <a class="nav-link" href="contacto.html">Contacto</a>
-          </li>
-          <li class="barra-nav-item">
-            <a class="nav-link" href="sobremi.html">Sobre Mi</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
+          <ul class="nav display-flex pt-5">
+            <li class="nav-item pe-1 pt-2">
+              <a class="nav-link text-white fs-4" href="../index.html">Inicio</a>
+            </li>
+            <li class="nav-item pe-1 pt-2">
+              <a class="nav-link text-white fs-4" href="portfolio.html">Portfolio</a>
+            </li>
+            <li class="nav-item pe-1 pt-2">
+              <a class="nav-link text-white fs-4" href="contacto.html">Contacto</a>
+            </li>
+            <li class="nav-item pe-1 pt-2">
+              <a class="nav-link text-white fs-4" href="sobremi.html">Sobre Mi</a>
+            </li>
+          </ul>
+        </nav>
+      </header>
 
-    <main class="fondo-portfolio">
-      
-      <h2 class="titulo-principal-portfolio">Alguno de mis trabajos!</h2>
+      <main class="m-3 bg-warning bg-opacity-50">
+        <h2 class="text-center text-white display-1 fw-bold py-5">
+          Alguno de mis trabajos!
+        </h2>
 
-      <section class="trabajos-portfolio">
-        
-        <div class="trabajos-porfolios-item">
-          <img class="trabajos-porfolios-foto" src="../assets/img/agendas.jpeg" title="Agendas" />
-        </div>
-        <div class="trabajos-porfolios-item">
-          <img class="trabajos-porfolios-foto" src="../assets/img/agendas2.jpeg" title="Agendas" />
-        </div>
-        <div class="trabajos-porfolios-item">
-          <img class="trabajos-porfolios-foto" src="../assets/img/ilustration2.jpeg" title="Ilustration" />
-        </div>
-        <div class="trabajos-porfolios-item">
-          <img class="trabajos-porfolios-foto" src="../assets/img/ilustration.jpeg" title="Ilustration" />
-        </div>
-      </section>
-    </main>
+        <section class="container my-5">
+          <div class="row">
+            <div class="col-12 m-3">
+              <img class="img-fluid" src="../assets/img/agendas.jpeg" title="Agendas" />
+            </div>
+          </div>
 
-    <footer>
-      <h5>Copyright, todos los derechos reservados.</h5>
+          <div class="row">
+            <div class="col-12 m-3">
+              <img class="img-fluid" src="../assets/img/agendas2.jpeg" title="Agendas" />
+            </div>
+          </div>
 
-      <h5>Seguime en mis redes:</h5>
+          <div class="row">
+            <div class="col-12 m-3">
+              <img class="img-fluid" src="../assets/img/ilustration2.jpeg" title="Ilustration" />
+            </div>
+          </div>
 
-      <a href="https://instagram.com/vicodiseno?igshid=YmMyMTA2M2Y=" target="_blank" ><img   class="foto-pie" src="../assets/img/instagram.jpg" alt="instagram" /></a>
+          <div class="row">
+            <div class="col-12 m-3">
+              <img class="img-fluid" src="../assets/img/ilustration.jpeg" title="Ilustration" />
+            </div>
+          </div>
+        </section>
+      </main>
 
-      <a href="https://www.facebook.com/VicoDiseno" target="_blank"><img class="foto-pie" src="../assets/img/facebook.png" alt="facebook" /></a>
-    </footer>
-  </div>
+      <footer>
+        <h5 class="fs-6 text-center">
+          Copyright, todos los derechos reservados.
+        </h5>
+
+        <h5 class="fs-6 text-center">
+          Seguime en mis redes:
+          <a href="https://instagram.com/vicodiseno?igshid=YmMyMTA2M2Y=" target="_blank"
+            ><img src="../assets/img/instagram.jpg" alt="instagram" height="30px"
+          /></a>
+          <a href="https://www.facebook.com/VicoDiseno" target="_blank" ><img src="../assets/img/facebook.png" alt="facebook" height="30px" /></a>
+        </h5>
+      </footer>
+    </div>
   </body>
 </html>
