--- a/pages/sobremi.html
+++ b/pages/sobremi.html
@@ -8,102 +8,99 @@
     <link rel="stylesheet" type="text/css" href="../css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Edu+VIC+WA+NT+Beginner&display=swap" rel="stylesheet" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous" />
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Edu+VIC+WA+NT+Beginner&display=swap"rel="stylesheet" />
   </head>
 
   <body>
-    <div>
-      <header class="bg-success bg-opacity-50">
-        <nav class="d-flex justify-content-between">
-          <a href="../index.html"
-            ><img class="m-3 rounded-circle border border-dark" src="../assets/img/logo.png" alt="logo" width="150px" height="150px" /></a>
+    <div class="grilla">
+      <header>
+        <nav>
+          <a href="../index.html"><img class="logotipo" src="../assets/img/logo.png" alt="logo" /></a>
 
-          <ul class="nav display-flex pt-5">
-            <li class="nav-item pe-1 pt-2">
-              <a class="nav-link text-white fs-4" href="../index.html">Inicio</a>
+          <ul class="barra-nav">
+            <li class="barra-nav-item">
+              <a class="nav-link" href="../index.html">Inicio</a>
             </li>
-            <li class="nav-item pe-1 pt-2">
-              <a class="nav-link text-white fs-4" href="portfolio.html">Portfolio</a>
+            <li class="barra-nav-item">
+              <a class="nav-link" href="portfolio.html">Portfolio</a>
             </li>
-            <li class="nav-item pe-1 pt-2">
-              <a class="nav-link text-white fs-4" href="contacto.html">Contacto</a>
+            <li class="barra-nav-item">
+              <a class="nav-link" href="contacto.html">Contacto</a>
             </li>
-            <li class="nav-item pe-1 pt-2">
-              <a class="nav-link text-white fs-4" href="sobremi.html">Sobre Mi</a>
+            <li class="barra-nav-item">
+              <a class="nav-link" href="sobremi.html">Sobre Mi</a>
             </li>
           </ul>
         </nav>
       </header>
 
-      <main class="container bg-warning">
-        <section>
-          <img class="rounded mx-auto d-block" src="../assets/img/viky.png" width="300px" alt="Victoria Capisano"/>
+      <main class="fondo-sobremi">
+        <section class="info">
+          <img class="info__foto" src="../assets/img/viky.png" width="300" alt="Victoria Capisano" />
 
-          <h3 class="text-center text-white display-3 fw-bold py-5">Holaaaaaaa Soy Vico!</h3>
+          <h3 class="info__titulo">Holaaaaaaa Soy Vico!</h3>
 
-          <p class="text-center text-white h4 py-3">
+          <p class="info__contenido">
             Tengo 28 años, soy Diseñadora Gráfica y vivo en Córdoba, Argentina.
           </p>
 
-          <p class="text-center text-white h4 py-3">
+          <p class="info__contenido">
             Si tengo que hablar de mi, te puedo decir que soy bastante Inquieta,
             impaciente, a veces creativa/ productiva y otras veces no tanto;
             despelotada y un poquito colgada.
           </p>
 
-          <p class="text-center text-white h4 py-3">
+          <p class="info__contenido">
             Arranqué vendiendo zapatillas y alpargatas pintadas a mano y también
             pasé por el fantástico mundo de la papelería, los cuadernos y las
             agendas experimentando un poco el armado de regalos personalizados y
             sublimaciones.
           </p>
 
-          <p class="text-center text-white h4 py-3">
+          <p class="info__contenido">
             En el medio, me animé a ser #CommunityManager y generadora de
             contenido; actividad que aún forma parte de mi vida y en la que
             todavía sigo aprendiendo y mejorando. Me gusta muchísimo dibujar y
             pintar.
           </p>
 
-          <p class="text-center text-white h4 py-3">
+          <p class="info__contenido">
             Creo que lo que más disfruto de este proceso es luego poder verlo
             reflejado y materializado en objetos, paredes o productos.
           </p>
 
-          <p class="text-center text-white h4 py-3">
+          <p class="info__contenido">
             En que puedo ayudar a tu marca? Creando estampas para papelería o
             encuadernación.
           </p>
 
-          <p class="text-center text-white h4 py-3">
+          <p class="info__contenido">
             Diseñando la identidad de tu marca para tu emprendimiento o empresa
             Asesorandote para saber aplicar correctamente tu identidad en redes
             sociales Podes pedirme un presupuesto o consultarme lo que necesites
             en la pestaña de
-            <a class="text-center text-white h4 py-3" href="contacto.html"
-              >CONTACTO.</a
-            >
+            <a class="info__contenido" href="contacto.html">CONTACTO.</a>
           </p>
 
-          <p class="text-center text-white h4 py-3">
+          <p class="info__contenido">
             ¡Espero podamos trabajar juntos!
           </p>
 
-          <p class="text-center text-white h4 py-3">Vico</p>
+          <p class="info__contenido">
+            Vico
+          </p>
         </section>
       </main>
 
       <footer>
-        <h5 class="fs-6 text-center">
-          Copyright, todos los derechos reservados.
-        </h5>
 
-        <h5 class="fs-6 text-center">
-          Seguime en mis redes:
-          <a href="https://instagram.com/vicodiseno?igshid=YmMyMTA2M2Y=" target="_blank" ><img src="../assets/img/instagram.jpg" alt="instagram" height="30px"/></a>
-          <a href="https://www.facebook.com/VicoDiseno" target="_blank"><img src="../assets/img/facebook.png" alt="facebook" height="30px"/></a>
-        </h5>
+        <h5>Copyright, todos los derechos reservados.</h5>
+
+        <h5>Seguime en mis redes:</h5>
+
+        <a href="https://instagram.com/vicodiseno?igshid=YmMyMTA2M2Y=" target="_blank" ><img class="foto-pie" src="../assets/img/instagram.jpg" alt="instagram" /></a>
+
+        <a href="https://www.facebook.com/VicoDiseno" target="_blank" ><img class="foto-pie" src="../assets/img/facebook.png" alt="facebook" /></a>
       </footer>
     </div>
   </body>
