resolviendo problemas de git

--- a/pages/sobremi.html
+++ b/pages/sobremi.html
@@ -13,90 +13,95 @@
 
   <body>
     <div class="grilla">
-    <header>
-      <nav>
-        <a href="../index.html"><img class="logotipo" src="../assets/img/logo.png" alt="logo" /></a>
+      <header>
+        <nav>
+          <a href="../index.html"><img class="logotipo" src="../assets/img/logo.png" alt="logo" /></a>
 
-        <ul class="barra-nav">
-          <li class="barra-nav-item">
-            <a class="nav-link" href="../index.html">Inicio</a>
-          </li>
-          <li class="barra-nav-item">
-            <a class="nav-link" href="portfolio.html">Portfolio</a>
-          </li>
-          <li class="barra-nav-item">
-            <a class="nav-link" href="contacto.html">Contacto</a>
-          </li>
-          <li class="barra-nav-item">
-            <a class="nav-link" href="sobremi.html">Sobre Mi</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
+          <ul class="barra-nav">
+            <li class="barra-nav-item">
+              <a class="nav-link" href="../index.html">Inicio</a>
+            </li>
+            <li class="barra-nav-item">
+              <a class="nav-link" href="portfolio.html">Portfolio</a>
+            </li>
+            <li class="barra-nav-item">
+              <a class="nav-link" href="contacto.html">Contacto</a>
+            </li>
+            <li class="barra-nav-item">
+              <a class="nav-link" href="sobremi.html">Sobre Mi</a>
+            </li>
+          </ul>
+        </nav>
+      </header>
 
-    <main class="fondo-sobremi">
-      <section class="info">
-        <img class="info__foto" src="../assets/img/viky.png" width="300" alt="Victoria Capisano" />
+      <main class="fondo-sobremi">
+        <section class="info">
+          <img class="info__foto" src="../assets/img/viky.png" width="300" alt="Victoria Capisano" />
 
-        <h3 class="info__titulo">Holaaaaaaa Soy Vico!</h3>
+          <h3 class="info__titulo">Holaaaaaaa Soy Vico!</h3>
 
-        <p class="info__contenido">
-          Tengo 28 años, soy Diseñadora Gráfica y vivo en Córdoba, Argentina.
-        </p>
+          <p class="info__contenido">
+            Tengo 28 años, soy Diseñadora Gráfica y vivo en Córdoba, Argentina.
+          </p>
 
-        <p class="info__contenido">
-          Si tengo que hablar de mi, te puedo decir que soy bastante Inquieta,
-          impaciente, a veces creativa/ productiva y otras veces no tanto;
-          despelotada y un poquito colgada.
-        </p>
+          <p class="info__contenido">
+            Si tengo que hablar de mi, te puedo decir que soy bastante Inquieta,
+            impaciente, a veces creativa/ productiva y otras veces no tanto;
+            despelotada y un poquito colgada.
+          </p>
 
-        <p class="info__contenido">
-          Arranqué vendiendo zapatillas y alpargatas pintadas a mano y también
-          pasé por el fantástico mundo de la papelería, los cuadernos y las
-          agendas experimentando un poco el armado de regalos personalizados y
-          sublimaciones.
-        </p>
+          <p class="info__contenido">
+            Arranqué vendiendo zapatillas y alpargatas pintadas a mano y también
+            pasé por el fantástico mundo de la papelería, los cuadernos y las
+            agendas experimentando un poco el armado de regalos personalizados y
+            sublimaciones.
+          </p>
 
-        <p class="info__contenido">
-          En el medio, me animé a ser #CommunityManager y generadora de
-          contenido; actividad que aún forma parte de mi vida y en la que
-          todavía sigo aprendiendo y mejorando. Me gusta muchísimo dibujar y
-          pintar.
-        </p>
+          <p class="info__contenido">
+            En el medio, me animé a ser #CommunityManager y generadora de
+            contenido; actividad que aún forma parte de mi vida y en la que
+            todavía sigo aprendiendo y mejorando. Me gusta muchísimo dibujar y
+            pintar.
+          </p>
 
-        <p class="info__contenido">
-          Creo que lo que más disfruto de este proceso es luego poder verlo
-          reflejado y materializado en objetos, paredes o productos.
-        </p>
+          <p class="info__contenido">
+            Creo que lo que más disfruto de este proceso es luego poder verlo
+            reflejado y materializado en objetos, paredes o productos.
+          </p>
 
-        <p class="info__contenido">
-          En que puedo ayudar a tu marca? Creando estampas para papelería o
-          encuadernación.
-        </p>
+          <p class="info__contenido">
+            En que puedo ayudar a tu marca? Creando estampas para papelería o
+            encuadernación.
+          </p>
 
-        <p class="info__contenido">
-          Diseñando la identidad de tu marca para tu emprendimiento o empresa
-          Asesorandote para saber aplicar correctamente tu identidad en redes
-          sociales Podes pedirme un presupuesto o consultarme lo que necesites
-          en la pestaña de
-          <a class="info__contenido" href="contacto.html">CONTACTO.</a>
-        </p>
+          <p class="info__contenido">
+            Diseñando la identidad de tu marca para tu emprendimiento o empresa
+            Asesorandote para saber aplicar correctamente tu identidad en redes
+            sociales Podes pedirme un presupuesto o consultarme lo que necesites
+            en la pestaña de
+            <a class="info__contenido" href="contacto.html">CONTACTO.</a>
+          </p>
 
-        <p class="info__contenido">¡Espero podamos trabajar juntos!</p>
+          <p class="info__contenido">
+            ¡Espero podamos trabajar juntos!
+          </p>
 
-        <p class="info__contenido">Vico</p>
-      </section>
-    </main>
+          <p class="info__contenido">
+            Vico
+          </p>
+        </section>
+      </main>
 
-    <footer>
-      <h5>Copyright, todos los derechos reservados.</h5>
+      <footer>
 
-      <h5>Seguime en mis redes:</h5>
+        <h5>Copyright, todos los derechos reservados.</h5>
 
-      <a href="https://instagram.com/vicodiseno?igshid=YmMyMTA2M2Y=" target="_blank" ><img class="foto-pie" src="../assets/img/instagram.jpg" alt="instagram" /></a>
+        <h5>Seguime en mis redes:</h5>
 
-      <a href="https://www.facebook.com/VicoDiseno" target="_blank" ><img class="foto-pie" src="../assets/img/facebook.png" alt="facebook" /></a>
-    </footer>
-  </div>
+        <a href="https://instagram.com/vicodiseno?igshid=YmMyMTA2M2Y=" target="_blank" ><img class="foto-pie" src="../assets/img/instagram.jpg" alt="instagram" /></a>
+
+        <a href="https://www.facebook.com/VicoDiseno" target="_blank" ><img class="foto-pie" src="../assets/img/facebook.png" alt="facebook" /></a>
+      </footer>
+    </div>
   </body>
 </html>
