agregando la rama dev

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -14,22 +14,18 @@
   <body>
     <div class="grilla">
       <header>
-        <nav>
-          <a href="../index.html" ><img class="logotipo" src="../assets/img/logo.png" alt="logo" /></a>
-
-          <ul class="barra-nav">
-            <li class="barra-nav-item">
-              <a class="nav-link" href="../index.html">Inicio</a>
-            </li>
-            <li class="barra-nav-item">
-              <a class="nav-link" href="portfolio.html">Portfolio</a>
-            </li>
-            <li class="barra-nav-item">
-              <a class="nav-link" href="contacto.html">Contacto</a>
-            </li>
-            <li class="barra-nav-item">
-              <a class="nav-link" href="sobremi.html">Sobre Mi</a>
-            </li>
+        <nav class="nav">
+          <a href="../index.html"><img class="nav__logotipo" src="../assets/img/logo.png" alt="logo" /></a>
+  
+          <ul class="nav__barra">
+            <li class="nav__barra-item">
+              <a class="nav__barra-link" href="../index.html">Inicio</a></li>
+            <li class="nav__barra-item">
+              <a class="nav__barra-link" href="../pages/portfolio.html">Portfolio</a></li>
+            <li class="nav__barra-item">
+              <a class="nav__barra-link" href="../pages/contacto.html">Contacto</a></li>
+            <li class="nav__barra-item">
+              <a class="nav__barra-link" href="../pages/sobremi.html">Sobre Mi</a></li>
           </ul>
         </nav>
       </header>
