Agregando titulos y keywords

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>VICO DISEÑO</title>
+    <title>Vico Diseño | Diseño Grafico</title>
+    <meta name="description" content="En Vico Diseño encontraras el mejor asesoramiento en diseño grafico para que tu marca, tu empresa o tu emprendimiento tenga el mejor estilo." /> 
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
