--- a/pages/sobremi.html
+++ b/pages/sobremi.html
@@ -4,7 +4,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>VICO</title>
+    <title>Vico Diseño | Sobre mi</title>
+    <meta name="description" content="Conoce la cara detras de la mejor empresa de diseño grafico de Argentina.">
     <link rel="stylesheet" type="text/css" href="../css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
