--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -4,7 +4,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>VICO</title>
+    <title>Vico Diseño | Portafolio</title>
+    <meta name="description" content="Entra a conocer todos los trabajos de diseño que hemos ido realizando">
     <link rel="stylesheet" type="text/css" href="../css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
