corrigiendo para entrega final

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vico Diseño | Diseño Grafico</title>
     <meta name="description" content="En Vico Diseño encontraras el mejor asesoramiento en diseño grafico para que tu marca, tu empresa o tu emprendimiento tenga el mejor estilo." /> 
+    <meta name="keywords" content="Diseño grafico, estilo, crear contenido,  marca, empresa, asesoramiento, estampas, identidad">
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -87,9 +88,9 @@
 
     <footer>
 
-      <h5>Copyright, todos los derechos reservados.</h5>
+      <h4>Copyright, todos los derechos reservados.</h4>
 
-      <h5>Seguime en mis redes:</h5>
+      <h4>Seguime en mis redes:</h4>
 
       <a href="https://instagram.com/vicodiseno?igshid=YmMyMTA2M2Y=" target="_blank" /><img class="foto-pie" src="./assets/img/instagram.jpg" alt="instagram" /></a>
 
