--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -31,18 +31,18 @@
           </nav>
         </header>
 
-        <main class="fondo-contacto">
+        <main class="contacto">
 
-          <h2 class="titulo-principal">¡Dejame tu consulta aqui abajo!</h2>
+          <h1 class="contacto-titulo-principal">¡Dejame tu consulta aqui abajo!</h1>
 
-          <section class="contacto">
+          <section class="contacto__formulario">
 
-            <form class="contacto__form" action="send.php" method="get" enctype="multipart/form-data" >
+            <form class="contacto__formulario-form" action="send.php" method="get" enctype="multipart/form-data" >
               
-              <input class="contacto__form-item" type="text" placeholder=" Nombre" />
-              <input class="contacto__form-item" type="text" placeholder=" Apellido" />
-              <input class="contacto__form-item" type="email" placeholder=" E-mail" />
-              <input class="contacto__form-item" type="text"  placeholder=" Asunto" />
+              <input class="contacto__formulario-form-item" type="text" placeholder=" Nombre" />
+              <input class="contacto__formulario-form-item" type="text" placeholder=" Apellido" />
+              <input class="contacto__formulario-form-item" type="email" placeholder=" E-mail" />
+              <input class="contacto__formulario-form-item" type="text"  placeholder=" Asunto" />
 
               <textarea cols="38" rows="10" placeholder="Escriba aqui su consulta." ></textarea>
 
@@ -54,10 +54,10 @@
         </main>
 
         <footer>
+          
+          <h4>Copyright, todos los derechos reservados.</h4>
 
-          <h5>Copyright, todos los derechos reservados.</h5>
-
-          <h5>Seguime en mis redes:</h5>
+          <h4>Seguime en mis redes:</h4>
 
           <a href="https://instagram.com/vicodiseno?igshid=YmMyMTA2M2Y=" target="_blank"><img class="foto-pie" src="../assets/img/instagram.jpg" alt="instagram" /></a>
 
