--- a/pages/sobremi.html
+++ b/pages/sobremi.html
@@ -31,59 +31,59 @@
         </nav>
       </header>
 
-      <main class="fondo-sobremi">
-        <section class="info">
-          <img class="info__foto" src="../assets/img/viky.png" width="300" alt="Victoria Capisano" />
+      <main class="sobremi">
+        <section class="sobremi__info">
+          <img class="sobremi__info-foto" src="../assets/img/viky.png" width="300" alt="Victoria Capisano" />
 
-          <h3 class="info__titulo">Holaaaaaaa Soy Vico!</h3>
+          <h1 class="sobremi__info-titulo">Holaaaaaaa Soy Vico!</h1>
 
-          <p class="info__contenido">
+          <p class="sobremi__info-contenido">
             Tengo 28 años, soy Diseñadora Gráfica y vivo en Córdoba, Argentina.
           </p>
 
-          <p class="info__contenido">
+          <p class="sobremi__info-contenido">
             Si tengo que hablar de mi, te puedo decir que soy bastante Inquieta,
             impaciente, a veces creativa/ productiva y otras veces no tanto;
             despelotada y un poquito colgada.
           </p>
 
-          <p class="info__contenido">
+          <p class="sobremi__info-contenido">
             Arranqué vendiendo zapatillas y alpargatas pintadas a mano y también
             pasé por el fantástico mundo de la papelería, los cuadernos y las
             agendas experimentando un poco el armado de regalos personalizados y
             sublimaciones.
           </p>
 
-          <p class="info__contenido">
+          <p class="sobremi__info-contenido">
             En el medio, me animé a ser #CommunityManager y generadora de
             contenido; actividad que aún forma parte de mi vida y en la que
             todavía sigo aprendiendo y mejorando. Me gusta muchísimo dibujar y
             pintar.
           </p>
 
-          <p class="info__contenido">
+          <p class="sobremi__info-contenido">
             Creo que lo que más disfruto de este proceso es luego poder verlo
             reflejado y materializado en objetos, paredes o productos.
           </p>
 
-          <p class="info__contenido">
+          <p class="sobremi__info-contenido">
             En que puedo ayudar a tu marca? Creando estampas para papelería o
             encuadernación.
           </p>
 
-          <p class="info__contenido">
+          <p class="sobremi__info-contenido">
             Diseñando la identidad de tu marca para tu emprendimiento o empresa
             Asesorandote para saber aplicar correctamente tu identidad en redes
             sociales Podes pedirme un presupuesto o consultarme lo que necesites
             en la pestaña de
-            <a class="info__contenido" href="contacto.html">CONTACTO.</a>
+            <a class="sobremi__info-contenido" href="contacto.html">CONTACTO.</a>
           </p>
 
-          <p class="info__contenido">
+          <p class="sobremi__info-contenido">
             ¡Espero podamos trabajar juntos!
           </p>
 
-          <p class="info__contenido">
+          <p class="sobremi__info-contenido">
             Vico
           </p>
         </section>
@@ -91,9 +91,9 @@
 
       <footer>
 
-        <h5>Copyright, todos los derechos reservados.</h5>
+        <h4>Copyright, todos los derechos reservados.</h4>
 
-        <h5>Seguime en mis redes:</h5>
+        <h4>Seguime en mis redes:</h4>
 
         <a href="https://instagram.com/vicodiseno?igshid=YmMyMTA2M2Y=" target="_blank" ><img class="foto-pie" src="../assets/img/instagram.jpg" alt="instagram" /></a>
 
